Completed and Added functionality to Collection page

--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,12 @@
 a.active hr {
   display: block;
 }
-
-@media (max-width:640px) {
-  a.active{
+::-webkit-scrollbar {
+  display: none;
+}
+@media (max-width: 640px) {
+  a.active {
     background-color: black;
-    color:white
+    color: white;
   }
 }
